# Effelsberg

./: .gitignore  README.md  Testing.py  Various byte strings  playground.py
MT-Subreflector/: SubreflectorClient.py
MT_Subreflector/: MTCommand.py  save.p  (+4 more)
mt_subreflector/: README.md  Subreflector_Output_Nov-4.p  Testing.py  getter.py  getter_data.txt  mock_subreflector.py  mtcommand.py  setup.cfg  setup.py  subreflector_client.py  subreflector_program.py  temppp.py  user_client.py
mt_subreflector/Documentation/: MTSubreflector Communication Class.aux  MTSubreflector Communication Class.tex  MTSubreflector Communication Class.toc  programmers_manual.aux  programmers_manual.tex  programmers_manual.toc
mt_subreflector/Documentation/1/: 1.aux  1.tex  users_manual.aux  users_manual.tex  users_manual.toc
mt_subreflector/Documentation/Bakcup/: MTSubreflector Communication Class.tex
mt_subreflector/Nov 25 tests/hexapod1/: data_analysis.py
mt_subreflector/src/: mock_subreflector.py  subreflector_client.py  subreflector_program.py
mt_subreflector/subtools/: Testing.py  __init__.py  config.py  getter.py  mock_start_server.py  mock_subreflector.py  mtcommand.py  process_message.py  subreflector_client.py  subreflector_program.py  subreflector_start_server.py  user_client.py
mt_subreflector/subtools/QT_Framework/: first.ui
mt_subreflector/subtools/tests/: TestSubreflectorProgram.py  test_mtcommand.py  test_subreflectorprogram.py
mt_subreflector/temp/: subreflector_program_snapshot.py
mt_subreflector/tests/: TestSubreflectorProgram.py  test_SubreflectorClient.py
(+53 files in other folders)
