[tool:pytest]
minversion = 3.0
norecursedirs = build docs/_build
doctest_plus = enabled
addopts = -p no:warnings
doctest_optionflags =
    NORMALIZE_WHITESPACE
    ELLIPSIS
    FLOAT_CMP

[flake8]
exclude = extern,sphinx,*parsetab.py

[pycodestyle]
exclude = extern,sphinx,*parsetab.py

[metadata]
description-file = README.rst
package_name = subtools
description = "add short description"
long_description = add longer description
author = Ivan Sharankov
author_email = ivansharankov3@gmail.com
license = GNU GPL v3+
url = https://github.com/iisharankov/Effelsberg
github_project = iisharankov/Effelsberg
# install_requires should be formatted as a comma-separated list, e.g.:
# install_requires = astropy, scipy, matplotlib
;install_requires = astropy, numpy
# Note: you will also need to change this in your package's __init__.py
minimum_python_version = 3.5